@@ -37,8 +37,7 @@ has prompt_2fa => (
 
 has _login => (
     is      => 'ro',
-    isa     => 'Maybe[Str]',
-    lazy    => 1,
+    isa     => 'Str',
     builder => '_build_login',
 );
 
@@ -87,7 +86,7 @@ sub _build_login {
     if (%identity) {
         $login = $identity{login};
     } else {
-        $login = `git config github.user`;  chomp $login;
+        $login = _get_git_github_user();
     }
 
     if (!$login) {
@@ -95,10 +94,15 @@ sub _build_login {
             "Err: missing value 'user' in ~/.github" :
             "Err: Missing value 'github.user' in git config";
 
-        $self->log($error);
-        return undef;
+        die $error;
     }
 
+    return $login;
+}
+
+sub _get_git_github_user {
+    my $login = `git config github.user`;
+    chomp $login;
     return $login;
 }
 
